--- a/themes/omid-dev/layouts/partials/head.html
+++ b/themes/omid-dev/layouts/partials/head.html
@@ -100,6 +100,13 @@
 <meta name="theme-color" content="{{ site.Params.assets.theme_color | default "#2e2e33" }}">
 <meta name="msapplication-TileColor" content="{{ site.Params.assets.msapplication_TileColor | default "#2e2e33" }}">
 
+{{- /* Webmentions & IndieAuth */}}
+<link rel="webmention" href="https://webmention.io/omid.dev/webmention" />
+<link rel="pingback" href="https://webmention.io/omid.dev/xmlrpc" />
+{{- range site.Params.footer.social }}
+<link href="{{ .url }}" rel="me">
+{{- end }}
+
 {{- /* RSS */}}
 {{ range .AlternativeOutputFormats -}}
 <link rel="{{ .Rel }}" type="{{ .MediaType.Type | html }}" href="{{ .Permalink | safeURL }}">
