--- a/themes/omid-dev/assets/css/extended/comments.css
+++ b/themes/omid-dev/assets/css/extended/comments.css
@@ -57,6 +57,7 @@
 .x-btn { background-color: #000000; }
 .mastodon-btn { background-color: #6364ff; }
 .bluesky-btn { background-color: #0560ff; }
+.reddit-btn { background-color: #ff4500; }
 .hn-btn { background-color: #ff6600; }
 
 /* Webmentions */
